tests/miniJava/neg/001382_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int [ 0 ] System.out.println ; } }
